--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
-    font-size: 3vw;
+    font-size: 16px;
 }
 
 :root{
@@ -23,6 +23,7 @@ header{
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     min-height: 100vh;
     text-align: center;
     position: relative;
@@ -64,4 +65,18 @@ header nav > a{
     padding: 7px;
     border-radius: 10px;
     transition: 0.2s;
+}
+
+main > h1{
+    text-align: center;
+    font-size: 2em;
+    font-weight: 700;
+    padding: 20px;
+}
+
+main > p {
+    width: 80vw;
+    margin: auto;
+    padding: 10px;
+    text-align: center;
 }
