--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -25,16 +25,31 @@ header > h1{
 
 main div{
     border: 2px solid var(--corTema);
-    padding: 3px;
+    padding: 5px;
     margin: 3px;
+    border-radius: 10px;
     display: inline-block;
 }
 
+main div > h1{
+    font-size: 1em;
+    width: 100px;
+    padding: 0;
+}
+
 main div > img{
-    width: 60px;
+    width: 100px;
+    height: 80px;
 }
 
 main div > p {
     font-size: 0.7em;
     width: 100px;
+    padding: 0;
+}
+
+main div > p.preco {
+    font-size: 1em;
+    font-weight: 600;
+    padding: 5px;
 }
