--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -23,6 +23,12 @@ header > h1{
     padding-bottom: 100px;
 }
 
+main article{
+    margin-top: 20px;
+    padding: 10px;
+    border-top: 2px solid var(--corTema);
+}
+
 main div{
     border: 2px solid var(--corTema);
     padding: 5px;
