Cafés quente adicionado ao catalogo

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,12 @@ main h1{
     padding: 10px;
 }
 
+main h2{
+    font-size: 1.5em;
+    font-weight: 500;
+    padding: 10px;
+}
+
 main p {
     width: 80vw;
     margin: auto;
