--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -45,7 +45,7 @@ main div > img{
 main div > p {
     font-size: 0.7em;
     width: 100px;
-    padding: 0;
+    padding: 2px;
 }
 
 main div > p.preco {
