--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -24,23 +24,19 @@ header > h1{
 }
 
 main article{
-    margin-top: 20px;
-    padding: 10px;
-    border-top: 2px solid var(--corTema);
+    border-bottom: 2px solid var(--corTema);
+    padding: 5px;
+}
+
+main article > h1{
+    font-size: 1em;
+    text-align: left;
+    padding: 0px;
 }
 
 main div{
-    border: 2px solid var(--corTema);
-    padding: 5px;
-    margin: 3px;
-    border-radius: 10px;
-    display: inline-block;
-}
-
-main div > h1{
-    font-size: 1em;
-    width: 100px;
-    padding: 0;
+    display: flex;
+    align-items: center;
 }
 
 main div > img{
@@ -50,12 +46,13 @@ main div > img{
 
 main div > p {
     font-size: 0.7em;
-    width: 100px;
-    padding: 2px;
+    padding: 10px;
+    text-align: left;
 }
 
 main div > p.preco {
     font-size: 1em;
     font-weight: 600;
     padding: 5px;
+    width: 100px;
 }
